--- a/web/index.html
+++ b/web/index.html
@@ -13,5 +13,6 @@ and open the template in the editor.
     <body>
         <div>TODO write content</div>
         <!-- This is a git test -->
+        <!-- The quick brown fox jumps over the lazy dog -->
     </body>
 </html>
