--- a/web/index.html
+++ b/web/index.html
@@ -17,5 +17,6 @@ and open the template in the editor.
         
         
         <!-- Only newBranch1 has this -->
+        <!-- Add new name comment -->
     </body>
 </html>
